tests/snapshots/test_runner__tests__compiler__typecheck__constrained_type_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Boolean = case true case false
let (a : String) `not equals` (b : String) : Boolean
  exists (equals : T -> T -> Boolean)
 //                ^ Error: Unknown type symbol
  = true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/constrained_type_2.kk:3:20
  │
3 │   exists (equals : T -> T -> Boolean)
  │                    ^ Unknown type symbol
  │
  = Cannot find this type symbol in the current scope
